remove all comment to make code clean, should obey license if to distribute